--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="overlay"></div>
 
       <nav class="navbar">
-        <section class="menu-section">
+        <div class="menu-section">
           <img class="logo" src="images/logo.svg" alt="logo" />
           <ul class="menu">
-            <li class="menu-item" id="menu-item">
+            <li class="menu-item dropdown-menu">
               <a href="#">Features</a>
               <img
                 class="arrow-icon"
@@ -50,7 +50,7 @@
                 </ul>
               </div>
             </li>
-            <li class="menu-item" id="menu-item">
+            <li class="menu-item dropdown-menu">
               <a href="#">Company</a>
               <img
                 class="arrow-icon"
@@ -75,7 +75,7 @@
             <li class="menu-item"><a href="#">Career</a></li>
             <li class="menu-item"><a href="#">About</a></li>
           </ul>
-        </section>
+        </div>
 
         <section class="btn-container">
           <button class="btn">Login</button>
@@ -90,7 +90,7 @@
         />
       </nav>
 
-      <nav class="mobile-navbar">
+      <aside class="mobile-navbar">
         <img
           id="close-menu"
           class="close-menu"
@@ -98,9 +98,9 @@
           alt="menu-icon-close"
         />
 
-        <section class="mobile-menu-section">
+        <div class="mobile-menu-section">
           <ul class="menu">
-            <li class="menu-item" id="mobile-menu-item">
+            <li class="menu-item dropdown-menu">
               <a href="#">Features</a>
               <img
                 class="arrow-icon"
@@ -129,7 +129,7 @@
                 </ul>
               </div>
             </li>
-            <li class="menu-item" id="menu-item">
+            <li class="menu-item dropdown-menu">
               <a href="#">Company</a>
               <img
                 class="arrow-icon"
@@ -154,13 +154,13 @@
             <li class="menu-item"><a href="#">Career</a></li>
             <li class="menu-item"><a href="#">About</a></li>
           </ul>
-        </section>
+        </div>
 
         <section class="mobile-btn-container">
           <button class="btn">Login</button>
           <button class="btn outlined">Register</button>
         </section>
-      </nav>
+      </aside>
 
       <section class="hero-section container">
         <div class="hero-left">
